--- a/css/bootstrap.less
+++ b/css/bootstrap.less
@@ -1,8 +1,24 @@
 @import "less/bootstrap.less";
 
 label{
-	color:#000000;
+  color:#000000;
+  text-align:left;
 }
+
+/* Styles for credit card payment logos */
+.crm-container .credit_card_type-section .crm-credit_card_type-icons a {
+  display: block;
+  float: left;
+  width: 50px;
+  height: 30px;
+  background: url(../i/creditcard-icons.png) no-repeat 0 0 transparent;
+  text-indent: -20000px;
+  margin-right: 10px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  border-radius: 3px;
+  border: 1px solid #FFFFFF;
+}
+
 .crm-container .credit_card_type-section .crm-credit_card_type-icons .crm-credit_card_type-icon-visa {
   background-position: -50px 0;
 }
@@ -32,4 +48,8 @@ label{
   width: 50px;
   height: 30px;
   background: url(../i/creditcard-icons.png) no-repeat 0 0 transparent;
+}
+
+.crm-marker{
+  color:red;
 }
