--- a/css/custom.bootstrap.less
+++ b/css/custom.bootstrap.less
@@ -43,7 +43,7 @@ label{
   background-position: -300px 0;
 }
 
-.crm-container .cvv2-icon {
+.cvv2-icon {
   display: block;
   width: 50px;
   height: 30px;
