--- a/css/civicrm.bootstrap.css
+++ b/css/civicrm.bootstrap.css
@@ -6242,7 +6242,7 @@ label {
 .crm-container .credit_card_type-section .crm-credit_card_type-icons .crm-credit_card_type-icon-unionpay {
   background-position: -300px 0;
 }
-.crm-container .cvv2-icon {
+.cvv2-icon {
   display: block;
   width: 50px;
   height: 30px;
